Add support for Scanning older JDKs for Main Methods